fix: fix chrome install